--- a/src/containers/Home/Home-style.css
+++ b/src/containers/Home/Home-style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Poppins:wght@100&family=Rochester&display=swap');
 .father{
     display: flex;
     align-items: center;
@@ -12,30 +13,125 @@
     justify-content: center;
 }
 
+.title{
+    font-size: 70px;
+    font-weight: bold;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+   margin-top: -30px;
+   margin-bottom: -30px;
+}
+
+.head-container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: left;
+    margin-left: 100px;
+    margin-right: 50px;
+}
+
+.code::after {
+    font-family: 'Rochester' , sans-serif;
+    font-style: italic;
+    content: "<h1>";
+    color: grey;
+    font-size: 20px;
+    padding-bottom: -20px;
+}
+.code1::after {
+    font-family: 'Rochester' , sans-serif;
+    font-style: italic;
+    content: "</h1>";
+    color: grey;
+    font-size: 20px;
+    padding-bottom: -20px;
+}
+
+.description{
+    font-size: 20px;
+    color: whitesmoke;
+    font-family: 'Poppins', sans-serif;
+    
+    margin-bottom: -30px;
+}
+
+.span1::after {
+    font-family: 'Rochester' , sans-serif;
+    font-style: italic;
+    content: "<p> ";
+    color: grey;
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+.span2::after {
+    font-family: 'Rochester' , sans-serif;
+    font-style: italic;
+    content: " </p>";
+    color: grey;
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
 
 .container-cloud{
     position:relative;
-    height: 400px;
+    height: 200px;
+    border-bottom: solid 1px cyan;
 }
 
 .cloud {
     position: relative;
-    top: 50px;
-    width: 320px;
-    height: 100px;
+    top: 40px;
+    width: 250px;
+    height: 80px;
     background-color: #fff;
-    border-radius: 100px;
+    border-radius: 120px;
 }
 
 .cloud::before{
     content: '';
     position: absolute;
-    top: -50px;
-    left: 40px;
-    width: 110px;
-    height: 110px;
+    top: -30px;
+    left: 20px;
+    width: 90px;
+    height: 90px;
     background-color: #fff;
     border-radius: 50%;
-    box-shadow: 90px 0 0 30px #fff;
+    box-shadow: 80px 0 0 20px #fff;
 
+}
+
+.rain {
+    position: relative;
+    display: flex;
+    z-index: 1;
+    padding: 0 10px;
+}
+
+.rain span {
+    position: relative;
+    bottom: 10px;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    margin: 0 2px;
+    border-radius: 50%;
+    animation: animate 5s linear infinite;
+    animation-duration: calc(25s / var(--i));
+    transform-origin: bottom;
+}
+
+@keyframes animate {
+    0% {
+        
+        transform: translateY(0) scale(1) ;
+    }
+    70% {
+        transform: translateY(120px) scale(1);
+    }
+    100% {
+        transform: translateY(120px) scale(0);
+        background-color: cyan;
+    }
 }
